mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_const_field_modify.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot assign to const field 'x'
--> test_scripts/error_cases/semantic_const_field_modify.mux:6:1
   |
 6 | c.x = 10
   | ^^^^^^^^
   |
= help: Const fields cannot be modified after initialization. Remove the 'const' modifier from the field declaration if mutation is needed.
